--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         </section>
 
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="tela"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="tela"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="tela"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="tela"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="tela"></a><br>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="https://www.youtube.com/channel/UChT0-LcFYpHB6s-6zg8PoIQ" target="tela"><img src="imagens/logo-youtube.jpg" alt="tela"></a><br>
+            <a href="https://github.com/felipemagal" target="tela"><img src="imagens/logo-github.jpg" alt="tela"></a><br>
+            <a href="https://www.instagram.com/felipe_magal/" target="tela"><img src="imagens/logo-instagram.jpg" alt="tela"></a><br>
+            <a href="https://twitter.com/protegidodaKGB" target="tela"><img src="imagens/logo-twitter.jpg" alt="tela"></a><br>
+            <a href="https://www.facebook.com/felipe.magalhaes.585/" target="tela"><img src="imagens/logo-facebook.jpg" alt="tela"></a><br>
         </section>
     </main>
 </body>
