--- a/instagram.html
+++ b/instagram.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube</title>
+    <title>instagram</title>
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="YouTube">
-    <a href="https://www.youtube.com/channel/UChT0-LcFYpHB6s-6zg8PoIQ" target="_blank">ACESSE</a>
+    <img src="imagens/tela-instagram.jpg" alt="Instagram">
+    <a href="https://www.instagram.com/felipe_magal/" target="_blank">ACESSE</a>
 </body>
 </html>
